--- a/data/cards/62592805.yaml
+++ b/data/cards/62592805.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 2 monsters
-    Once per turn: You can discard 1 card, then target 1 card your opponent controls, or up to 2 instead if this card has "Purrely Sleepy Memory" as material; return them to the hand. Up to thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can Set 1 "Purrely" Trap directly from your Deck.
+    Once per turn: You can discard 1 card, then target 1 card your opponent controls, or up to 2 if this card has "Purrely Sleepy Memory" as material; return that card(s) to the hand. Up to thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can Set 1 "Purrely" Trap directly from your Deck.
   de:
   es:
   fr:
@@ -45,8 +45,43 @@ images:
 - index: 1
   image: EpurrelyNoir-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN044
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE044
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR044
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT044
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT044
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP044
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR044
     set_name: Duelist Nexus
     rarities:
     - Rare
