--- a/data/cards/yugipedia992983.yaml
+++ b/data/cards/yugipedia992983.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Xyz Armored Torpedo
+  en: Xyz Armor Torpedo
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 3 monsters
-    Cannot attack unless it has material. You can detach 2 materials from this card; draw 1 card. You can only use this effect of "Xyz Armored Torpedo" once per turn. While this card is equipped to a monster, apply these effects.
+    Cannot attack unless it has material. You can detach 2 materials from this card; draw 1 card. You can only use this effect of "Xyz Armor Torpedo" once per turn. While this card is equipped to a monster, apply these effects.
     ● If the equipped monster battles, until the end of the Damage Step, your opponent cannot activate cards or effects, also the effects of all face-up monsters they control are negated.
     ● If the equipped monster is an Xyz Monster, your opponent cannot target it with card effects.
   de:
@@ -39,7 +39,7 @@ series:
 - Xyz
 images:
 - index: 1
-  image: XyzArmoredTorpedo-AGOV-JP-OP.png
+  image: XyzArmorTorpedo-AGOV-JP-OP.png
 sets:
   ja:
   - set_number: AGOV-JP039
