--- a/data/cards/00821049.yaml
+++ b/data/cards/00821049.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1+ Tuners + 1 LIGHT monster
-    This card's name becomes "Visas Starfrost" while in the Monster Zone. You can only use each of the following effects of "Visas Amritara" once per turn. If this card is Synchro Summoned: You can add 1 Spell/Trap that mentions "Visas Starfrost" from your Deck to your hand. During your Main Phase: You can destroy 1 monster you control, also, for the rest of this turn, all Synchro Monsters you control will gain 800 ATK.
+    This card's name becomes "Visas Starfrost" while on the field. You can only use each of the following effects of "Visas Amritara" once per turn. If this card is Synchro Summoned: You can add 1 Spell/Trap that mentions "Visas Starfrost" from your Deck to your hand. During your Main Phase: You can destroy 1 monster you control, also all Synchro Monsters you control will gain 800 ATK this turn.
   de:
   es:
   fr:
@@ -45,6 +45,36 @@ images:
 - index: 1
   image: VisasAmritara-DUNE-JP-UR.png
 sets:
+  en:
+  - set_number: DUNE-EN039
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE039
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR039
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT039
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT039
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP039
     set_name: Duelist Nexus
@@ -54,6 +84,19 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP039
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR039
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR039
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Ultra Rare
