--- a/data/cards/36320744.yaml
+++ b/data/cards/36320744.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    If this card is Special Summoned: You can add 1 "Horn of Olifant" or 1 card that mentions "Infernoble Knight Emperor Charles" from your Deck to your hand. When a card or effect is activated that targets this card, or when this card is targeted for an attack (Quick Effect): You can send 1 FIRE Warrior monster from your Deck to the GY, and if you do, banish this card (until the End Phase), then you can Special Summon 1 "Roland" monster from your Deck or Extra Deck. You can only use each effect of "Angelica, Princess of Noble Arms" once per turn.
+    If this card is Special Summoned: You can add 1 "Horn of Olifant", or 1 card that mentions "Infernoble Knight Emperor Charles", from your Deck to your hand. When a card or effect is activated that targets this card on the field, or when this card is targeted for an attack (Quick Effect): You can send 1 FIRE Warrior monster from your Deck to the GY, and if you do, banish this card (until the End Phase), then you can Special Summon 1 "Roland" monster from your Deck or Extra Deck. You can only use each effect of "Angelica, Princess of Noble Arms" once per turn.
   de:
   es:
   fr:
@@ -45,6 +45,36 @@ images:
 - index: 1
   image: AngelicaPrincessofNobleArms-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN040
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE040
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR040
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT040
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT040
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP040
     set_name: Duelist Nexus
@@ -53,6 +83,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP040
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR040
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR040
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
