--- a/data/cards/74659582.yaml
+++ b/data/cards/74659582.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 "Runick" monsters
-    During your Main Phase or your opponent's Battle Phase (Quick Effect): You can target 1 face-up monster your opponent controls; banish both it and this card until the End Phase. If your opponent adds a card(s) from the Deck to the hand (except during the Damage Step): You can Special Summon 1 "Runick Token"  (Fairy/LIGHT/Level 4/ATK 1500/DEF 1500) in Attack Position. You can only use each effect of "Sleipnir the Runick Mane" once per turn.
+    During your Main Phase or your opponent's Battle Phase (Quick Effect): You can target 1 face-up monster your opponent controls; banish both that monster and this card until the End Phase. If a card(s) is added from the Main Deck to your opponent's hand (except during the Damage Step): You can Special Summon 1 "Runick Token"  (Fairy/LIGHT/Level 4/ATK 1500/DEF 1500) in Attack Position. You can only use each effect of "Sleipnir the Runick Mane" once per turn.
   de:
   es:
   fr:
@@ -45,6 +45,36 @@ images:
 - index: 1
   image: SleipnirtheRunickMane-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN035
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE035
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR035
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT035
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT035
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP035
     set_name: Duelist Nexus
@@ -53,6 +83,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP035
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR035
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR035
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
