--- a/data/cards/98696958.yaml
+++ b/data/cards/98696958.yaml
@@ -34,6 +34,36 @@ images:
 - index: 1
   image: DarkCorridor-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN059
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  de:
+  - set_number: DUNE-DE059
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  fr:
+  - set_number: DUNE-FR059
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  it:
+  - set_number: DUNE-IT059
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  pt:
+  - set_number: DUNE-PT059
+    set_name: Duelist Nexus
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP059
     set_name: Duelist Nexus
@@ -42,6 +72,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP059
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR059
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR059
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
