--- a/data/cards/yugipedia993000.yaml
+++ b/data/cards/yugipedia993000.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> マイティ・ストライカー
-  ja_romaji: Tekkujīnasu Maiti Sutoraikā
+  ja_romaji: Tekku Jīnasu Maiti Sutoraikā
   ko:
   ko_rr:
   zh-TW:
