--- a/data/cards/yugipedia993004.yaml
+++ b/data/cards/yugipedia993004.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> オーバー・ドラグナー
-  ja_romaji: Tekkujīnasu Ōbā Doragunā
+  ja_romaji: Tekku Jīnasu Ōbā Doragunā
   ko:
   ko_rr:
   zh-TW:
