--- a/data/cards/yugipedia993007.yaml
+++ b/data/cards/yugipedia993007.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> グレイブ・ブラスター
-  ja_romaji: Tekkujīnasu Gureibu Burasutā
+  ja_romaji: Tekku Jīnasu Gureibu Burasutā
   ko:
   ko_rr:
   zh-TW:
