--- a/data/cards/yugipedia993015.yaml
+++ b/data/cards/yugipedia993015.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> — オールクリア
-  ja_romaji: Tekkujīnasu - Ōrukuria
+  ja_romaji: Tekku Jīnasu - Ōru Kuria
   ko:
   ko_rr:
   zh-TW:
