--- a/data/cards/yugipedia993017.yaml
+++ b/data/cards/yugipedia993017.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＴＧ<rt>テックジーナス</rt></ruby> — クローズ
-  ja_romaji: Tekkujīnasu - Kurōzu
+  ja_romaji: Tekku Jīnasu - Kurōzu
   ko:
   ko_rr:
   zh-TW:
