--- a/data/rush/15328.yaml
+++ b/data/rush/15328.yaml
@@ -41,6 +41,9 @@ series:
 images:
 - index: 1
   image: GaiaTheFierceKnight-RDB221-JP-C.png
+  illustration: GaiaTheFierceKnight-DBR-JP-VG-artwork.png
+- index: 2
+  image: GaiaTheFierceKnight-RDKP14-JP-OP.png;
 sets:
   ja:
   - set_number: RD/WJMP-JP001
@@ -57,6 +60,10 @@ sets:
     - Common
     - Super Rare
     - Ultra Rare
+  - set_number: RD/KP14-JP000
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/SBD3-KR004
     set_name: Strongest Battle Deck Gavin - Demon Commander Three Legions
