--- a/data/rush/yugipedia975299.yaml
+++ b/data/rush/yugipedia975299.yaml
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドにモンスターがいない場合、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +46,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードのカード名はこのターン、「カース・オブ・ドラゴン」になる。その後、自分フィールドのこのカードと自分のフィールド・墓地のモンスター１体を素材として持ち主のデッキに戻してフュージョン召喚できる。
   ko:
   zh-TW:
   zh-CN:
