--- a/data/rush/yugipedia977131.yaml
+++ b/data/rush/yugipedia977131.yaml
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに攻撃表示モンスターがいない場合、このカードは手札から自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示のフュージョンモンスター１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +46,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの魔法・罠カード１枚を選んで破壊する。その後、自分の墓地に「竜騎士ガイア」がいる場合、相手フィールドのカード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -54,6 +57,8 @@ attribute: WATER
 level: 5
 atk: 1000
 def: 2000
+series:
+- Gaia
 images:
 - index: 1
   image: LauncherCatapultTurtle-RDKP14-JP-OP.png
