--- a/data/rush/yugipedia993036.yaml
+++ b/data/rush/yugipedia993036.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: 竜呪術の魔道士
-  ja_romaji:
+  ja: <ruby>竜<rt>りゅう</rt></ruby><ruby>呪<rt>じゅ</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>の<ruby>魔<rt>ま</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>士<rt>し</rt></ruby>
+  ja_romaji: Ryūjujutsu no Madōshi
   ko:
   ko_rr:
   zh-TW:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地に魔法カードが３枚以上ある場合、自分フィールドの表側表示のこのカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の手札または自分の墓地の「暗黒騎士ガイア」または通常モンスター（レベル５／ドラゴン族）１体を選び、自分フィールドに表側表示で特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -42,6 +44,8 @@ attribute: DARK
 level: 4
 atk: 1100
 def: 1100
+series:
+- Gaia
 images:
 - index: 1
   image: DragoncurseMagician-RDKP14-JP-OP.png
