--- a/data/cards/15171722.yaml
+++ b/data/cards/15171722.yaml
@@ -1,7 +1,7 @@
 konami_id: 18805
 password: 15171722
 name:
-  en: Evolsaur Rios
+  en: Evolsaur Lios
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 进化龙 上龙
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can Set 1 "Evolutionary Bridge" or "Evo-Singularity" directly from your Deck. During your Main Phase, if you control this card that was Special Summoned by a FIRE monster's effect or Normal Summoned: You can send 1 FIRE Reptile or Dinosaur monster from your Deck to the GY, then you can make the Type and Level of 2 monsters on the field become the sent monster's. You can only use each effect of "Evolsaur Rios" once per turn.
+    If this card is Normal or Special Summoned: You can Set 1 "Evolutionary Bridge" or "Evo-Singularity" directly from your Deck. During your Main Phase, if you control this card that was Special Summoned by a FIRE monster's effect or Normal Summoned: You can send 1 FIRE Reptile or Dinosaur monster from your Deck to the GY, then you can make the Type and Level of 2 monsters on the field become the sent monster's. You can only use each effect of "Evolsaur Lios" once per turn.
   de:
   es:
   fr:
@@ -39,10 +39,35 @@ series:
 - Evolsaur
 images:
 - index: 1
-  image: EvolsaurRios-DUNE-JP-C.png
+  image: EvolsaurLios-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN018
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE018
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR018
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT018
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT018
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP018
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR018
     set_name: Duelist Nexus
     rarities:
     - Common
