--- a/data/cards/16893370.yaml
+++ b/data/cards/16893370.yaml
@@ -1,7 +1,7 @@
 konami_id: 18802
 password: 16893370
 name:
-  en: Nemleria Réaliser, the Dreamaterializer Sleeping Princess
+  en: Dreaming Reality of Nemleria, Realized
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 梦现的寝姬-涅姆蕾莉娅具现
 text:
   en: |-
-    Gains 100 ATK for each face-down card in your Extra Deck. You can only use each of the following effects of "Nemleria Réaliser, the Dreamaterializer Sleeping Princess" once per turn. If this card is in your hand: You can target 1 monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card. If this card is Special Summoned: You can activate 1 of these effects;
+    Gains 100 ATK for each face-down card in your Extra Deck. You can only use each of the following effects of "Dreaming Reality of Nemleria, Realized" once per turn. If this card is in your hand: You can target 1 monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card. If this card is Special Summoned: You can activate 1 of these effects;
     ● Add 1 "Dreaming Nemleria" from your Deck to your Extra Deck face-up.
     ● Change 1 other face-up monster on the field to face-down Defense Position.
   de:
@@ -40,8 +40,28 @@ series:
 - Nemleria
 images:
 - index: 1
-  image: NemleriaRéalisertheDreamaterializerSleepingPrincess-DUNE-JP-SR.png
+  image: DreamingRealityofNemleriaRealized-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN015
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE015
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR015
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT015
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT015
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP015
     set_name: Duelist Nexus
@@ -50,6 +70,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP015
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR015
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR015
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
