--- a/data/cards/24269961.yaml
+++ b/data/cards/24269961.yaml
@@ -1,7 +1,7 @@
 konami_id: 18836
 password: 24269961
 name:
-  en: Unchained Soul King Yama
+  en: Unchained Soul Lord of Yama
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Fiend monsters
-    If this card is Special Summoned: You can add 1 "Unchained" monster from your Deck or GY to your hand. If a card(s) you control is destroyed by battle or card effect while this card is in your GY: You can banish this card; Special Summon 1 Fiend monster from your hand or GY, then you can destroy 1 card you control. You can only use each effect of "Unchained Soul King Yama" once per turn.
+    If this card is Special Summoned: You can add 1 "Unchained" monster from your Deck or GY to your hand. If a card(s) you control is destroyed by battle or card effect while this card is in your GY: You can banish this card; Special Summon 1 Fiend monster from your hand or GY, then you can destroy 1 card you control. You can only use each effect of "Unchained Soul Lord of Yama" once per turn.
   de:
   es:
   fr:
@@ -45,8 +45,28 @@ series:
 - Unchained Soul
 images:
 - index: 1
-  image: UnchainedSoulKingYama-DUNE-JP-SR.png
+  image: UnchainedSoulLordofYama-DUNE-JP-SR.png
 sets:
+  en:
+  - set_number: DUNE-EN049
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE049
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR049
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT049
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT049
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP049
     set_name: Duelist Nexus
@@ -55,6 +75,18 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP049
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR049
+    set_name: Duelist Nexus
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR049
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Super Rare
