--- a/data/cards/35103106.yaml
+++ b/data/cards/35103106.yaml
@@ -1,7 +1,7 @@
 konami_id: 18830
 password: 35103106
 name:
-  en: Evolzar Razh
+  en: Evolzar Lars
   de:
   es:
   fr:
@@ -44,8 +44,28 @@ series:
 - Evolzar
 images:
 - index: 1
-  image: EvolzarRazh-DUNE-JP-UR.png
+  image: EvolzarLars-DUNE-JP-UR.png
 sets:
+  en:
+  - set_number: DUNE-EN043
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE043
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR043
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT043
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT043
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP043
     set_name: Duelist Nexus
@@ -55,6 +75,19 @@ sets:
     - Secret Rare
     - Quarter Century Secret Rare
   - set_number: DUNE-JP043
+    set_name: Duelist Nexus +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
+  ko:
+  - set_number: DUNE-KR043
+    set_name: Duelist Nexus
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: DUNE-KR043
     set_name: Duelist Nexus +1 Bonus Pack
     rarities:
     - Ultra Rare
