--- a/data/cards/41165831.yaml
+++ b/data/cards/41165831.yaml
@@ -1,7 +1,7 @@
 konami_id: 18806
 password: 41165831
 name:
-  en: Unchained Soul Sharvara
+  en: Unchained Soul of Sharvara
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 破械神 奢婆罗
 text:
   en: |-
-    During the Main Phase, if this card is in your hand (Quick Effect): You can target 1 Fiend monster, or 1 Set card, you control; destroy it, and if you do, Special Summon this card, also while it is face-up in the Monster Zone, you cannot Special Summon monsters, except Fiend monsters. If this card is sent to the GY: You can Set 1 "Unchained" Spell/Trap directly from your Deck. You can only use each effect of "Unchained Soul Sharvara" once per turn.
+    During the Main Phase, if this card is in your hand (Quick Effect): You can target 1 Fiend monster, or 1 Set card, you control; destroy it, and if you do, Special Summon this card, also while it is face-up in the Monster Zone, you cannot Special Summon monsters, except Fiend monsters. If this card is sent to the GY: You can Set 1 "Unchained" Spell/Trap directly from your Deck. You can only use each effect of "Unchained Soul of Sharvara" once per turn.
   de:
   es:
   fr:
@@ -39,10 +39,35 @@ series:
 - Unchained Soul
 images:
 - index: 1
-  image: UnchainedSoulSharvara-DUNE-JP-C.png
+  image: UnchainedSoulofSharvara-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN019
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE019
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR019
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT019
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT019
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP019
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR019
     set_name: Duelist Nexus
     rarities:
     - Common
