--- a/data/cards/52382379.yaml
+++ b/data/cards/52382379.yaml
@@ -1,7 +1,7 @@
 konami_id: 18803
 password: 52382379
 name:
-  en: Nemleria's Dreameater - Réveil
+  en: Nemleria Dream Devourer - Reveil
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 涅姆蕾莉娅的食梦者-大闹钟
 text:
   en: |-
-    If this card is in your hand or GY: You can banish 3 cards from your Extra Deck, face-down, except "Dreaming Nemleria"; Special Summon this card. You cannot Special Summon monsters from the Extra Deck the turn you activate this effect, except Pendulum Monsters. You can send 1 other Level 10 Beast monster from your hand or face-up field to the GY; Set 1 "Nemleria" Trap directly from your Deck. You can only use each effect of "Nemleria's Dreameater - Réveil" once per turn.
+    If this card is in your hand or GY: You can banish 3 cards from your Extra Deck, face-down, except "Dreaming Nemleria"; Special Summon this card. You cannot Special Summon monsters from the Extra Deck the turn you activate this effect, except Pendulum Monsters. You can send 1 other Level 10 Beast monster from your hand or face-up field to the GY; Set 1 "Nemleria" Trap directly from your Deck. You can only use each effect of "Nemleria Dream Devourer - Reveil" once per turn.
   de:
   es:
   fr:
@@ -38,10 +38,35 @@ series:
 - Nemleria
 images:
 - index: 1
-  image: NemleriasDreameaterRéveil-DUNE-JP-C.png
+  image: NemleriaDreamDevourerReveil-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN016
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE016
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR016
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT016
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT016
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP016
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR016
     set_name: Duelist Nexus
     rarities:
     - Common
