--- a/data/rush/yugipedia975301.yaml
+++ b/data/rush/yugipedia975301.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>歴<rt>れき</rt></ruby><ruby>戦<rt>せん</rt></ruby>の<ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>ガイア
-  ja_romaji: Rekisen no Ankoku Kishi Gaia
+  ja_romaji: Rekisen no Ankokukishi Gaia
   ko:
   ko_rr:
   zh-TW:
