--- a/data/cards/89776023.yaml
+++ b/data/cards/89776023.yaml
@@ -1,7 +1,7 @@
 konami_id: 18804
 password: 89776023
 name:
-  en: Evoltile Phoris
+  en: Evoltile Pholis
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 进化虫 棱角鳞鳄
 text:
   en: |-
-    If a monster(s) you control would be destroyed by battle or card effect, you can Tribute 1 Reptile or Dinosaur monster instead. You can only use each of the following effects of "Evoltile Phoris" once per turn. If this card is Normal or Special Summoned: You can Special Summon 1 "Evoltile" monster from your hand or GY in face-down Defense Position. During your Main Phase: You can Set 1 "Evo-Force" or "Evo-Instant" directly from your Deck.
+    If a monster(s) you control would be destroyed by battle or card effect, you can Tribute 1 Reptile or Dinosaur monster instead. You can only use each of the following effects of "Evoltile Pholis" once per turn. If this card is Normal or Special Summoned: You can Special Summon 1 "Evoltile" monster from your hand or GY in face-down Defense Position. During your Main Phase: You can Set 1 "Evo-Force" or "Evo-Instant" directly from your Deck.
   de:
   es:
   fr:
@@ -39,10 +39,35 @@ series:
 - Evoltile
 images:
 - index: 1
-  image: EvoltilePhoris-DUNE-JP-C.png
+  image: EvoltilePholis-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN017
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE017
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR017
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT017
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT017
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP017
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR017
     set_name: Duelist Nexus
     rarities:
     - Common
