--- a/data/cards/90126061.yaml
+++ b/data/cards/90126061.yaml
@@ -66,7 +66,7 @@ attribute: DARK
 rank: 5
 atk: 0
 def: 0
-materials: 2+ Level 5 monsters
+materials: 2 or more Level 5 monsters
 series:
 - Number
 - Number
