--- a/data/cards/yugipedia993023.yaml
+++ b/data/cards/yugipedia993023.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 Tuner or 1 Level 7 or 8 Dragon Synchro Monster in your GY; Special Summon it in Defense Position, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn after this card resolves, except Synchro Monsters. If "Crimson Dragon" and/or a Level 7 or 8 Dragon Synchro Monster(s) you control would be destroyed by battle or card effect, you can banish this card from your GY instead. You can only use activate 1 "Synchro Rumble" per turn.
+    Target 1 Tuner or 1 Level 7 or 8 Dragon Synchro Monster in your GY; Special Summon it in Defense Position, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn after this card resolves, except Synchro Monsters. If "Crimson Dragon" and/or a Level 7 or 8 Dragon Synchro Monster(s) you control would be destroyed by battle or card effect, you can banish this card from your GY instead. You can only activate 1 "Synchro Rumble" per turn.
   de:
   es:
   fr:
