--- a/data/rush/yugipedia993050.yaml
+++ b/data/rush/yugipedia993050.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、お互いのフィールドの元々の守備力が２１００の表側表示モンスターの攻撃力は５００アップし、お互いの「暗黒騎士ガイア」「竜騎士ガイア」の攻撃は貫通する。
   ko:
   zh-TW:
   zh-CN:
