--- a/data/rush/yugipedia993053.yaml
+++ b/data/rush/yugipedia993053.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示モンスター（レベル７／守備力２１００）がいる場合、相手がモンスターを召喚・特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター１体を選んで裏側守備表示にする。自分フィールドに表側表示の「竜騎士ガイア」がいる場合、さらに相手フィールドの裏側表示のカード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
