--- a/data/rush/yugipedia993060.yaml
+++ b/data/rush/yugipedia993060.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカードを３枚めくり、お互いに確認する。自分はめくったカードの中からモンスター（レベル３以上／爬虫類族）１体を選んで手札に加える事ができる。残りのカードを好きな順番でデッキの上に戻す。
   ko:
   zh-TW:
   zh-CN:
