--- a/data/cards/98696958.yaml
+++ b/data/cards/98696958.yaml
@@ -3,7 +3,7 @@ password: 98696958
 name:
   en: Dark Corridor
   de:
-  es:
+  es: Pasillo Oscuro
   fr:
   it:
   pt:
@@ -17,7 +17,8 @@ text:
   en: |-
     Add 1 "Dark World" monster from your Deck to your hand, then discard 1 card. You can only activate 1 "Dark Corridor" per turn.
   de:
-  es:
+  es: |-
+    Añade a tu mano 1 monstruo "Mundo Oscuro" en tu Deck, y después descarta 1 carta. Sólo puedes activar 1 "Pasillo Oscuro" por turno.
   fr:
   it:
   pt:
