--- a/data/cards/23969415.yaml
+++ b/data/cards/23969415.yaml
@@ -1,7 +1,7 @@
 konami_id: 18850
 password: 23969415
 name:
-  en: Transcendental Evolution Pill Beta
+  en: Beta Evolution Pill - Ultranscendance
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 超越进化药β
 text:
   en: |-
-    Tribute 2 monsters from your hand and/or field, including a Dinosaur monster; Special Summon 1 Level 5 or higher Dinosaur monster from your Deck or Extra Deck with an equal or higher ATK than the Tributed monsters' total ATK, also for the rest of this turn after this card resolves, you cannot Special Summon monsters from the Extra Deck, except Dragon, Dinosaur, Sea Serpent, or Wyrm monsters. You can only activate 1 "Transcendental Evolution Pill Beta" per turn.
+    Tribute 2 monsters from your hand and/or field, including a Dinosaur monster; Special Summon 1 Level 5 or higher Dinosaur monster from your Deck or Extra Deck with an equal or higher ATK than the Tributed monsters' total ATK, also for the rest of this turn after this card resolves, you cannot Special Summon monsters from the Extra Deck, except Dragon, Dinosaur, Sea Serpent, or Wyrm monsters. You can only activate 1 "Beta Evolution Pill - Ultranscendance" per turn.
   de:
   es:
   fr:
@@ -34,10 +34,35 @@ series:
 - Evolution Pill
 images:
 - index: 1
-  image: TranscendentalEvolutionPillBeta-DUNE-JP-C.png
+  image: BetaEvolutionPillUltranscendance-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN063
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE063
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR063
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT063
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT063
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP063
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR063
     set_name: Duelist Nexus
     rarities:
     - Common
