--- a/data/cards/55349196.yaml
+++ b/data/cards/55349196.yaml
@@ -1,7 +1,7 @@
 konami_id: 18794
 password: 55349196
 name:
-  en: King Rex the Twin-Headed Dragon
+  en: Double-Headed Dino King Rex
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 双头龙 恐龙王
 text:
   en: |-
-    If you control no monsters, you can Special Summon this card (from your hand). You can only Special Summon "King Rex the Twin-Headed Dragon" once per turn this way. If this card is Normal or Special Summoned: You can target 1 monster on the field with less ATK than the total ATK of all Dinosaur monsters you control; destroy it. You can only use this effect of "King Rex the Twin-Headed Dragon" once per turn.
+    If you control no monsters, you can Special Summon this card (from your hand). You can only Special Summon "Double-Headed Dino King Rex" once per turn this way. If this card is Normal or Special Summoned: You can target 1 monster on the field with less ATK than the total ATK of all Dinosaur monsters you control; destroy it. You can only use this effect of "Double-Headed Dino King Rex" once per turn.
   de:
   es:
   fr:
@@ -36,10 +36,35 @@ atk: 1600
 def: 1200
 images:
 - index: 1
-  image: KingRextheTwinHeadedDragon-DUNE-JP-C.png
+  image: DoubleHeadedDinoKingRex-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN007
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE007
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR007
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT007
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT007
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP007
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR007
     set_name: Duelist Nexus
     rarities:
     - Common
