--- a/data/cards/62314831.yaml
+++ b/data/cards/62314831.yaml
@@ -1,7 +1,7 @@
 konami_id: 18842
 password: 62314831
 name:
-  en: Pristine Planets Amritara
+  en: New World - Amritara
   de:
   es:
   fr:
@@ -42,10 +42,35 @@ series:
 - Broken World
 images:
 - index: 1
-  image: PristinePlanetsAmritara-DUNE-JP-C.png
+  image: NewWorldAmritara-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN055
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE055
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR055
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT055
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT055
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP055
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR055
     set_name: Duelist Nexus
     rarities:
     - Common
