--- a/data/cards/85407683.yaml
+++ b/data/cards/85407683.yaml
@@ -1,7 +1,7 @@
 konami_id: 18858
 password: 85407683
 name:
-  en: New World Full of Stars
+  en: New World Stars
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 星满的新世坏
 text:
   en: |-
-    The first time each monster you control would be destroyed by battle each turn while you control "Visas Starfrost", it is not destroyed. During your End Phase, if you control "Visas Starfrost": You can target 1 monster in your GY; shuffle it into the Deck, or, if you control a Tuner Synchro Monster, you can add it to your hand instead. You can only use this effect of "New World Full of Stars" once per turn.
+    The first time each monster you control would be destroyed by battle each turn while you control "Visas Starfrost", it is not destroyed. During your End Phase, if you control "Visas Starfrost": You can target 1 monster in your GY; shuffle it into the Deck, or, if you control a Tuner Synchro Monster, you can add it to your hand instead. You can only use this effect of "New World Stars" once per turn.
   de:
   es:
   fr:
@@ -32,10 +32,35 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
-  image: NewWorldFullofStars-DUNE-JP-C.png
+  image: NewWorldStars-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN071
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE071
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR071
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT071
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT071
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP071
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR071
     set_name: Duelist Nexus
     rarities:
     - Common
