--- a/data/cards/89809665.yaml
+++ b/data/cards/89809665.yaml
@@ -1,7 +1,7 @@
 konami_id: 18801
 password: 89809665
 name:
-  en: Infernoble Knight - Turpin
+  en: Infernoble Knight Turpin
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 焰圣骑士-杜平
 text:
   en: |-
-    While this card is an Equip Card, if the equipped monster is used as Synchro Material, you can treat it as a Tuner. You can only use each of the following effects of "Infernoble Knight - Turpin" once per turn. If you control a monster equipped with an Equip Card: You can Special Summon this card from your hand or GY, but if it is Summoned from the GY, banish it when it leaves the field. If this card is in your GY: You can target 1 Warrior monster you control; equip this card to that monster you control.
+    While this card is an Equip Card, if the equipped monster is used as Synchro Material, you can treat it as a Tuner. You can only use each of the following effects of "Infernoble Knight Turpin" once per turn. If you control a monster equipped with an Equip Card: You can Special Summon this card from your hand or GY, but if it is Summoned from the GY, banish it when it leaves the field. If this card is in your GY: You can target 1 Warrior monster you control; equip this card to that monster you control.
   de:
   es:
   fr:
@@ -41,8 +41,33 @@ images:
 - index: 1
   image: InfernobleKnightTurpin-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN014
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE014
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR014
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT014
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT014
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP014
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR014
     set_name: Duelist Nexus
     rarities:
     - Common
