--- a/data/cards/27015862.yaml
+++ b/data/cards/27015862.yaml
@@ -1,7 +1,7 @@
 konami_id: 18799
 password: 27015862
 name:
-  en: Veda Karantha
+  en: Veda Kalanta
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 维陀·卡兰塔
 text:
   en: |-
-    If a card(s) on the field is destroyed by card effect and "Visas Starfrost" is on the field (except during the Damage Step): You can Special Summon this card from your hand, then you can add 1 "Clear New World" from your Deck or GY to your hand. If another monster(s) in your possession is destroyed by card effect (except during the Damage Step): You can target 1 monster your opponent controls; destroy it, and if you do, this card gains ATK equal to that monster's original ATK until the end of this turn. You can only use each effect of "Veda Karantha" once per turn.
+    If a card(s) on the field is destroyed by card effect and "Visas Starfrost" is on the field (except during the Damage Step): You can Special Summon this card from your hand, then you can add 1 "Clear New World" from your Deck or GY to your hand. If another monster(s) in your possession is destroyed by card effect (except during the Damage Step): You can target 1 monster your opponent controls; destroy it, and if you do, this card gains ATK equal to that monster's original ATK until the end of this turn. You can only use each effect of "Veda Kalanta" once per turn.
   de:
   es:
   fr:
@@ -38,10 +38,35 @@ series:
 - Veda
 images:
 - index: 1
-  image: VedaKarantha-DUNE-JP-R.png
+  image: VedaKalanta-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN012
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE012
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR012
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT012
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT012
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP012
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR012
     set_name: Duelist Nexus
     rarities:
     - Rare
