--- a/data/cards/53404966.yaml
+++ b/data/cards/53404966.yaml
@@ -1,7 +1,7 @@
 konami_id: 18800
 password: 53404966
 name:
-  en: Infernoble Knight - Ricciardetto
+  en: Infernoble Knight Ricciardetto
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 焰圣骑士-里恰尔代托
 text:
   en: |-
-    You can banish this card from your hand or GY; Special Summon 1 Level 4 or lower FIRE Warrior monster from your hand as a Tuner. If this card is Normal or Special Summoned: You can target 1 Level 4 or lower FIRE Warrior monster in your GY, except "Infernoble Knight - Ricciardetto"; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Warrior monsters. You can only use 1 "Infernoble Knight - Ricciardetto" effect per turn, and only once that turn.
+    You can banish this card from your hand or GY; Special Summon 1 Level 4 or lower FIRE Warrior monster from your hand as a Tuner. If this card is Normal or Special Summoned: You can target 1 Level 4 or lower FIRE Warrior monster in your GY, except "Infernoble Knight Ricciardetto"; Special Summon it, also you cannot Special Summon monsters for the rest of this turn, except Warrior monsters. You can only use 1 "Infernoble Knight Ricciardetto" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -41,8 +41,33 @@ images:
 - index: 1
   image: InfernobleKnightRicciardetto-DUNE-JP-C.png
 sets:
+  en:
+  - set_number: DUNE-EN013
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE013
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR013
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT013
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT013
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP013
+    set_name: Duelist Nexus
+    rarities:
+    - Common
+  ko:
+  - set_number: DUNE-KR013
     set_name: Duelist Nexus
     rarities:
     - Common
