--- a/rush.yaml
+++ b/rush.yaml
@@ -104895,6 +104895,63 @@ yugipedia_page_id: 975311
 ---
 konami_id:
 name:
+  en: Snake Princess of Purity
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>清<rt>せい</rt></ruby><ruby>浄<rt>じょう</rt></ruby>の<ruby>蛇<rt>へび</rt></ruby><ruby>姫<rt>ひめ</rt></ruby>
+  ja_romaji: Seijō no Hebihime
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your opponent's field loses ATK equal to [the number of face-up LIGHT Attribute monsters on your field] x 600 until the end of this turn. Then, if you have 3 face-up monsters on your field, draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Reptile / Effect
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 1500
+images:
+- index: 1
+  image: SnakePrincessofPurity-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP042
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+yugipedia_page_id: 977129
+---
+konami_id:
+name:
   en: Launcher Catapult Turtle
   de:
   es:
@@ -106231,3 +106288,285 @@ sets:
     rarities:
     - C
 yugipedia_page_id: 993060
+---
+konami_id:
+name:
+  en: Secret Investigator Mismatch
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>捜<rt>そう</rt></ruby><ruby>査<rt>さ</rt></ruby><ruby>官<rt>かん</rt></ruby>ミスマッチ
+  ja_romaji: Himitsu Sōsakan Misumatchi
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If your opponent has a face-up Level 7 or higher monster on their field, send 1 Level 3 or lower Reptile Type monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Level 7 Reptile Type monster from your Graveyard to your field in face-up Attack Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Reptile / Effect
+attribute: LIGHT
+level: 3
+atk: 1300
+def: 300
+series:
+- Secret Investigator
+images:
+- index: 1
+  image: SecretInvestigatorMismatch-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP020
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 993201
+---
+konami_id:
+name:
+  en: Secret Investigator Mislead
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>捜<rt>そう</rt></ruby><ruby>査<rt>さ</rt></ruby><ruby>官<rt>かん</rt></ruby>ミスリード
+  ja_romaji: Himitsu Sōsakan Misurīdo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have another face-up Reptile Type monster on your field, pay 300 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change 1 face-down Defense Position monster on either side of the field to face-up Attack Position. Then, this card loses 1300 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Reptile / Effect
+attribute: LIGHT
+level: 3
+atk: 1300
+def: 300
+series:
+- Secret Investigator
+images:
+- index: 1
+  image: SecretInvestigatorMislead-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP021
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 993202
+---
+konami_id:
+name:
+  en: Secret Investigator Miscast
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>捜<rt>そう</rt></ruby><ruby>査<rt>さ</rt></ruby><ruby>官<rt>かん</rt></ruby>ミスキャスト
+  ja_romaji: Himitsu Sōsakan Misukyasuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have no other monsters on your field, pay 300 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard. Then, if a Reptile Type monster(s) is among the cards sent, you can add 1 LIGHT Attribute Reptile Type monster from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Reptile / Effect
+attribute: LIGHT
+level: 3
+atk: 300
+def: 300
+series:
+- Secret Investigator
+images:
+- index: 1
+  image: SecretInvestigatorMismatch-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP018
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 993203
+---
+konami_id:
+name:
+  en: Elite Secret Investigator Mystery
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エリート<ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>捜<rt>そう</rt></ruby><ruby>査<rt>さ</rt></ruby><ruby>官<rt>かん</rt></ruby>ミステリー
+  ja_romaji: Erīto Himitsu Sōsakan Misuterī
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 2 other face-up Reptile Type monsters from your field and 1 card from your hand into the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 300 ATK until the end of this turn. Then, you can Special Summon up to 2 Level 7 or higher Reptile Type monsters from your hand and/or Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Reptile / Effect
+attribute: LIGHT
+level: 7
+atk: 2300
+def: 1000
+series:
+- Secret Investigator
+images:
+- index: 1
+  image: EliteSecretInvestigatorMystery-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP022
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Rare
+    - Secret Rare
+yugipedia_page_id: 993204
+---
+konami_id:
+name:
+  en: Secret File 33 - Noble Death of Resentment
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby>FILE33-<ruby>怨<rt>うら</rt></ruby>みの<ruby>散<rt>さん</rt></ruby><ruby>華<rt>げ</rt></ruby>
+  ja_romaji: Himitsu Fairu Sanjūsan - Urami no Sange
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack, shuffle 3 Level 3 or higher Reptile Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The attacking monster loses 3000 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Secret Investigator
+images:
+- index: 1
+  image: SecretFile33NobleDeathofResentment-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP060
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+yugipedia_page_id: 993205
