--- a/data/cards/24081957.yaml
+++ b/data/cards/24081957.yaml
@@ -1,7 +1,7 @@
 konami_id: 18847
 password: 24081957
 name:
-  en: Tainted Treasure of Treason - Snake-Eye
+  en: Sinful Spoils of Subversion - Snake-Eye
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 反逆的罪宝-蛇眼
 text:
   en: |-
-    Target 1 face-up monster on the field; place it face-up in its owner's Spell & Trap Zone as a Continuous Spell. You can only activate 1 "Tainted Treasure of Treason - Snake-Eye" per turn.
+    Target 1 face-up monster on the field; place it face-up in its owner's Spell & Trap Zone as a Continuous Spell. You can only activate 1 "Sinful Spoils of Subversion - Snake-Eye" per turn.
   de:
   es:
   fr:
@@ -31,14 +31,39 @@ text:
 card_type: Spell
 property: Normal
 series:
-- Tainted Treasure
+- Sinful Spoils
 - Snake-Eye
 images:
 - index: 1
-  image: TaintedTreasureofTreasonSnakeEye-DUNE-JP-R.png
+  image: SinfulSpoilsofSubversionSnakeEye-DUNE-JP-R.png
 sets:
+  en:
+  - set_number: DUNE-EN060
+    set_name: Duelist Nexus
+    rarities:
+  de:
+  - set_number: DUNE-DE060
+    set_name: Duelist Nexus
+    rarities:
+  fr:
+  - set_number: DUNE-FR060
+    set_name: Duelist Nexus
+    rarities:
+  it:
+  - set_number: DUNE-IT060
+    set_name: Duelist Nexus
+    rarities:
+  pt:
+  - set_number: DUNE-PT060
+    set_name: Duelist Nexus
+    rarities:
   ja:
   - set_number: DUNE-JP060
+    set_name: Duelist Nexus
+    rarities:
+    - Rare
+  ko:
+  - set_number: DUNE-KR060
     set_name: Duelist Nexus
     rarities:
     - Rare
