--- a/data/cards/yugipedia992302.yaml
+++ b/data/cards/yugipedia992302.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: '"The Tainted Treasure Hunter Fiend"'
+  en: '"The Sinful Spoils Hunter Fiend"'
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Add 1 "Diabellestarr" monster from your Deck or GY to your hand. During your Main Phase: You can banish this card from your GY, then target 1 of your "Tainted Treasure" Spells/Traps that is banished or in your GY, except ""The Tainted Treasure Hunter Fiend""; place it on the bottom of the Deck, then draw 1 card. You can only use each effect of ""The Tainted Treasure Hunter Fiend"" once per turn.
+    Add 1 "Diabellestarr" monster from your Deck or GY to your hand. During your Main Phase: You can banish this card from your GY, then target 1 of your "Sinful Spoils" Spells/Traps that is banished or in your GY, except ""The Sinful Spoils Hunter Fiend""; place it on the bottom of the Deck, then draw 1 card. You can only use each effect of ""The Sinful Spoils Hunter Fiend"" once per turn.
   de:
   es:
   fr:
@@ -28,10 +28,10 @@ text:
 card_type: Spell
 property: Quick-Play
 series:
-- Tainted Treasure
+- Sinful Spoils
 images:
 - index: 1
-  image: TheTaintedTreasureHunterFiend-AGOV-JP-OP.png
+  image: TheSinfulSpoilsHunterFiend-AGOV-JP-OP.png
 sets:
   ja:
   - set_number: AGOV-JP054
