--- a/data/cards/01688285.yaml
+++ b/data/cards/01688285.yaml
@@ -53,7 +53,11 @@ series:
 - Traptrix
 images:
 - index: 1
+  image: TraptrixPinguicula-SD45-JP-UR.png
+  illustration: TraptrixPinguicula-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: TraptrixPinguicula-SDBT-EN-UR-1E.png
+  illustration: TraptrixPinguicula-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SDBT-EN042
