--- a/data/cards/yugipedia992308.yaml
+++ b/data/cards/yugipedia992308.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Tainted Treasure of Betrayal - Silvia
+  en: Sinful Spoils of Betrayal - Silvia
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Send 1 "Diabellestarr" monster from your hand or face-up field to the GY, then target 1 face-up card on the field; negate its effects. When your opponent activates a card or effect in response to the activation of your "Diabellestarr" monster's effect or "Tainted Treasure" Spell/Trap Card or effect: You can banish this card from your GY; negate that opponent's effect. You can only use 1 "Tainted Treasure of Betrayal - Silvia" effect per turn, and only once that turn.
+    Send 1 "Diabellestarr" monster from your hand or face-up field to the GY, then target 1 face-up card on the field; negate its effects. When your opponent activates a card or effect in response to the activation of your "Diabellestarr" monster's effect or "Sinful Spoils" Spell/Trap Card or effect: You can banish this card from your GY; negate that opponent's effect. You can only use 1 "Sinful Spoils of Betrayal - Silvia" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -28,10 +28,10 @@ text:
 card_type: Trap
 property: Normal
 series:
-- Tainted Treasure
+- Sinful Spoils
 images:
 - index: 1
-  image: TaintedTreasureofBetrayalSilvia-AGOV-JP-OP.png
+  image: SinfulSpoilsofBetrayalSilvia-AGOV-JP-OP.png
 sets:
   ja:
   - set_number: AGOV-JP074
