--- a/data/cards/yugipedia992333.yaml
+++ b/data/cards/yugipedia992333.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: The Original Tainted Treasure - Snake-Eye
+  en: The Original Sinful Spoils - Snake-Eye
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Send 1 other face-up card you control to the GY; Special Summon 1 Level 1 FIRE monster from your hand or Deck. You can banish this card from your GY, then target 1 "Snake-Eye" or "Diabellestarr" monster in your GY; add 1 Level 1 FIRE monster from your Deck to your hand, then place the targeted monster on the bottom of the Deck. You can only use 1 "The Original Tainted Treasure - Snake-Eye" effect per turn, and only once that turn.
+    Send 1 other face-up card you control to the GY; Special Summon 1 Level 1 FIRE monster from your hand or Deck. You can banish this card from your GY, then target 1 "Snake-Eye" or "Diabellestarr" monster in your GY; add 1 Level 1 FIRE monster from your Deck to your hand, then place the targeted monster on the bottom of the Deck. You can only use 1 "The Original Sinful Spoils - Snake-Eye" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -29,10 +29,10 @@ card_type: Spell
 property: Normal
 series:
 - Snake-Eye
-- Tainted Treasure
+- Sinful Spoils
 images:
 - index: 1
-  image: TheOriginalTaintedTreasureSnakeEye-AGOV-JP-OP.png
+  image: TheOriginalSinfulSpoilsSnakeEye-AGOV-JP-OP.png
 sets:
   ja:
   - set_number: AGOV-JP057
