--- a/data/rush/yugipedia993205.yaml
+++ b/data/rush/yugipedia993205.yaml
@@ -6,7 +6,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby>FILE33-<ruby>怨<rt>うら</rt></ruby>みの<ruby>散<rt>さん</rt></ruby><ruby>華<rt>げ</rt></ruby>
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>ＦＩＬＥ<rt>ファイル</rt></ruby>３３－<ruby>怨<rt>うら</rt></ruby>みの<ruby>散<rt>さん</rt></ruby><ruby>華<rt>げ</rt></ruby>
   ja_romaji: Himitsu Fairu Sanjūsan - Urami no Sange
   ko:
   ko_rr:
