--- a/rush.yaml
+++ b/rush.yaml
@@ -106451,7 +106451,7 @@ series:
 - Secret Investigator
 images:
 - index: 1
-  image: SecretInvestigatorMismatch-RDKP14-JP-OP.png
+  image: SecretInvestigatorMiscast-RDKP14-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP14-JP018
@@ -106526,7 +106526,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby>FILE33-<ruby>怨<rt>うら</rt></ruby>みの<ruby>散<rt>さん</rt></ruby><ruby>華<rt>げ</rt></ruby>
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>ＦＩＬＥ<rt>ファイル</rt></ruby>３３－<ruby>怨<rt>うら</rt></ruby>みの<ruby>散<rt>さん</rt></ruby><ruby>華<rt>げ</rt></ruby>
   ja_romaji: Himitsu Fairu Sanjūsan - Urami no Sange
   ko:
   ko_rr:
