--- a/data/cards/87837090.yaml
+++ b/data/cards/87837090.yaml
@@ -32,6 +32,7 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 1900
+materials: 1 Tuner + 1 or more non-Tuner monsters
 images:
 - index: 1
   image: KuibelttheBladeDragon-DUNE-EN-C-1E.png
